# reddit-universal-scraper

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: server.py
dashboard/: app.py
docs/: BLOG.md  INTEGRATION.md
export/: cloud.py  parquet.py
reddit_universal_scraper/: __init__.py  client.py  comments.py  extractors.py  job_tracking.py  media.py  models.py  monitor.py  service.py  settings.py  storage.py
scheduler/: cron.py
scraper/: __init__.py  async_scraper.py
scripts/: verify-uv-migration.sh
tests/: test_cli_mapping.py  test_docs_examples.py  test_extractors.py  test_monitor.py  test_network_smoke.py  test_package_import.py  test_scraper_service.py  test_storage.py
thoughts/plans/: 2026-05-21-1550-convert-project-to-uv.md  2026-05-21-1656-extract-scraper-library-api.md
thoughts/research/: 2026-05-21-1547-convert-to-uv.md
