[project]
name = "reddit-universal-scraper"
version = "0.1.1"
description = "A full-featured Reddit scraper with analytics dashboard, REST API, scheduled scraping, plugins, and more."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pandas",
    "requests",
    "aiohttp",
    "aiofiles",
    "streamlit",
    "openpyxl",
    "pyarrow",
    "fastapi",
    "uvicorn",
    "psutil",
    "duckdb",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project.optional-dependencies]
s3 = [
    "boto3",
]
gdrive = [
    "google-api-python-client",
    "google-auth-oauthlib",
]
cloud = [
    "boto3",
    "google-api-python-client",
    "google-auth-oauthlib",
]

[tool.hatch.build.targets.wheel]
packages = ["reddit_universal_scraper"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "hatchling>=1.27",
    "pytest>=8.0",
]
